--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </tr>
           <tr>
             <td>EOS soft</td>
-            <td>Software developer/td>
+            <td>Software developer</td>
             <td>2007 - 2011</td>
           </tr>
           <tr>
