--- a/index.html
+++ b/index.html
@@ -1,100 +1,107 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Lev Shchanov</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="info">
-        <img class="avatar" src="avatar.jpeg" width="200" alt="тут моя фотка" />
-        <div class="info-text">
-          <h1>Лев Щанов</h1>
-          <p><em>Я основатель одноименного <strong>Youtube канала</strong></em></p>
-          <p>Я люблю путешестовать, заниматься спортом и программировать</p>
-          <h4>Мои социальные сети</h4>
-          <a href="https://instagram.com/lev.2682" target="_blank">Instagram</a>
-          |
-          <a target="_blank" href="https://t.me/536095265">Telegram</a>
-          |
-          <a target="_blank" href="https://m.vk.com/shchanovlv">VK</a>          
-        </div>
-      </div>
-      <div class="card bg-1">
-        <h2>Мои хобби</h2>
-        <ol class="list">
-          <li>Блоггер</li>
-          <li>Быстрая езда на машинах</li>
-          <li>Спорт: ММА, лыжи</li>
-          <li>Путешествия</li>
-        </ol>  
-      </div>
 
-      <div class="card bg-2">
-        <h2>Опыт работы</h2>
-        <table class="table">
-          <tr>
-            <th>Компания</th>
-            <th>Должность</th>
-            <th>Период</th>
-          </tr>
-          <tr>
-            <td>Finam</td>
-            <td>Team Lead</td>
-            <td>2011 - now</td>
-          </tr>
-          <tr>
-            <td>EOS soft</td>
-            <td>Software developer</td>
-            <td>2007 - 2011</td>
-          </tr>
-          <tr>
-            <td>CBS inform</td>
-            <td>System analytic</td>
-            <td>2004 - 2007</td>
-          </tr>
-        </table>
-      </div>
-      <div class="card bg-3">
-        <h2>Youtube Курсы</h2>
-        <ul class="list-link">
-          <li>
-            <a href="https://www.youtube.com/watch?v=DOEtVdkKwcU">HTML для Начинающих - Практический Курс [2021]</a>
-          </li>
-          <li>
-            <a href="https://www.youtube.com/watch?v=SpCUuyZZTp8">CSS для Начинающих - Практический Курс [2021]</a>
-          </li>
-        </ul>        
-      </div>
-      <div class="card bg-4 contact">   
-        <h2>Связаться со мной</h2>
+<head>
+  <meta charset="UTF-8" />
+  <title>Lev Shchanov</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
-        <form action="#">
-          <div class="row">
-            <div class="form-group">
-              <label for="name">Ваше имя:</label>
-              <input type="text" id="name" autocomplete="off" placeholder="Введите ваше имя...">
-            </div>
-            <div class="form-group">
-              <label for="email">Ваш Email:</label>
-              <input type="email" id="email" autocomplete="off" placeholder="Введите email...">
-            </div>            
+<body>
+  <div class="container">
+    <div class="info">
+      <img class="avatar" src="avatar.jpeg" width="200" alt="тут моя фотка" />
+      <div class="info-text">
+        <h1>Лев Щанов</h1>
+        <p><em>Я основатель одноименного <strong>Youtube канала</strong></em></p>
+        <p>Я люблю путешестовать, заниматься спортом и программировать</p>
+        <h4>Мои социальные сети</h4>
+        <a href="https://instagram.com/lev.2682" target="_blank">Instagram</a>
+        |
+        <a target="_blank" href="https://t.me/536095265">Telegram</a>
+        |
+        <a target="_blank" href="https://m.vk.com/shchanovlv">VK</a>
+      </div>
+    </div>
+    <div class="card bg-1">
+      <h2>Мои хобби</h2>
+      <ol class="list">
+        <li>Блоггер</li>
+        <li>Быстрая езда на машинах</li>
+        <li>Спорт: ММА, лыжи</li>
+        <li>Путешествия</li>
+      </ol>
+    </div>
+
+    <div class="card bg-2">
+      <h2>Опыт работы</h2>
+      <table class="table">
+        <tr>
+          <th>Компания</th>
+          <th>Должность</th>
+          <th>Период</th>
+        </tr>
+        <tr>
+          <td>Finam</td>
+          <td>Team Lead</td>
+          <td>2011 - now</td>
+        </tr>
+        <tr>
+          <td>EOS soft</td>
+          <td>Software developer</td>
+          <td>2007 - 2011</td>
+        </tr>
+        <tr>
+          <td>CBS inform</td>
+          <td>System analytic</td>
+          <td>2004 - 2007</td>
+        </tr>
+      </table>
+    </div>
+    <div class="card bg-3">
+      <h2>Youtube Курсы</h2>
+      <ul class="list-link">
+        <li>
+          <a href="https://www.youtube.com/watch?v=DOEtVdkKwcU">HTML для Начинающих - Практический Курс [2021]</a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=SpCUuyZZTp8">CSS для Начинающих - Практический Курс [2021]</a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=FX2fiUvrYP4&list=PLqKQF2ojwm3n-ufn3E-l6Y0VxDrj3hM5M">Практика
+            JavaScript</a>
+        </li>
+      </ul>
+    </div>
+    <div class="card bg-4 contact">
+      <h2>Связаться со мной</h2>
+
+      <form action="#">
+        <div class="row">
+          <div class="form-group">
+            <label for="name">Ваше имя:</label>
+            <input type="text" id="name" autocomplete="off" placeholder="Введите ваше имя...">
           </div>
           <div class="form-group">
-            <label for="text">Вашe сообщение:</label>
-            <textarea id="text" rows="2" cols="15"></textarea>
+            <label for="email">Ваш Email:</label>
+            <input type="email" id="email" autocomplete="off" placeholder="Введите email...">
           </div>
-          <div class="form-group bg-5">
-            <input class="btn" type="submit" value="Связаться!">
-          </div>
-        </form>
-      </div>   
-      <div class="position">
-        <div class="box"></div>
-      </div>         
-    </div>    
+        </div>
+        <div class="form-group">
+          <label for="text">Вашe сообщение:</label>
+          <textarea id="text" rows="2" cols="15"></textarea>
+        </div>
+        <div class="form-group bg-5">
+          <input class="btn" type="submit" value="Связаться!">
+        </div>
+      </form>
+    </div>
+    <div class="position">
+      <div class="box"></div>
+    </div>
+  </div>
 
-    <div style="margin-bottom: 500px;;"></div>
-  </body>
+  <div style="margin-bottom: 500px;;"></div>
+</body>
+
 </html>
